--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "dependencies": {
     "moment": "^2.17.1",
     "prop-types": "^15.6.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.0",
+    "@types/react-native": "^0.63.45",
+    "@types/react-test-renderer": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
